--- a/client/public/index.html
+++ b/client/public/index.html
@@ -8,11 +8,11 @@
       name="Joberry"
       content="Your job hunting journey starts NOW ..."
     />
-    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon-16x16.png">
-    <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest">
-    <link rel="mask-icon" href="%PUBLIC_URL%/safari-pinned-tab.svg" color="#ef5da8">
+    <link rel="apple-touch-icon" sizes="120x120" href="%PUBLIC_URL%/favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/favicon/favicon-16x16.png">
+    <link rel="manifest" href="%PUBLIC_URL%/faviconsite.webmanifest">
+    <link rel="mask-icon" href="%PUBLIC_URL%/faviconsafari-pinned-tab.svg" color="#ef5da8">
     <meta name="msapplication-TileColor" content="#b91d47">
     <meta name="theme-color" content="#ffffff">
     <!--
